# trans-comarapa-app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README-Docker.md  README.md  REFACTORING_PLAN.md  SETUP-COMPLETO.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  env.example
backend/: .dockerignore  .env.docker  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README-Docker.md  README.md  TODO.md  __init__.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest-regression.ini  pytest.ini  requirements.txt  run.py  run_regression_tests.py  schemas.py  setup.py  test_db.py
backend/alembic/: env.py
backend/api/: __init__.py
backend/auth/: blacklist.py  brute_force.py  jwt.py  utils.py
backend/core/: config.py  enums.py  exception_handlers.py  exceptions.py  logging_config.py  redis.py  security.py  state_machines.py  ws_manager.py
backend/db/: cleanup.py  create_database.py  create_tables.py  curl-commands.txt  drop_database.py  seed.py  seed_config.py  session.py
backend/docs/: __init__.py  actual_class_diagram.mmd  class_diagram.mmd  component_diagram.mmd  deployment_diagram.mmd  domain_model.mmd  entity_relationship_diagram.json  object_diagram.mmd  purchase_reserve_activity_diagram.mmd  ticket_sequence.mmd  todo.md  use_cases.mmd
backend/models/: __init__.py  activity.py  administrator.py  assistant.py  bus.py  cash_register.py  cash_transaction.py  client.py  driver.py  location.py  office.py  owner.py  owner_withdrawal.py  package.py  package_item.py  package_state_history.py  passenger.py  (+9 more)
(+944 files in other folders)
